# mevzuat-gov-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scrapy.cfg
data_processing/: mevzuat_parser.py
mevzuat_scraper/: items.py  middlewares.py  pipelines.py  settings.py
mevzuat_scraper/spiders/: mevzuat_metadata_scraper.py  mevzuat_spider.py
