[tool.poetry]
name = "mevzuat-gov-scraper"
version = "0.1.0"
description = ""
authors = ["Dmitrii Mashkov <mashkoffdmitry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = "5.2.2"
scrapy = "^2.12.0"
tqdm = "^4.67.1"
selenium = "^4.27.1"
beautifulsoup4 = "^4.12.3"
webdriver-manager = "^4.0.2"
numpy = "^2.2.2"
requests = "^2.32.3"
spacy = "3.4.2"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
